[gd_scene load_steps=22 format=3 uid="uid://gwc6fm51hvnl"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_543vs"]
[ext_resource type="Texture2D" uid="uid://be16ktvmsths6" path="res://Burger Topper Assets/Burger Parts/BunBottom.png" id="1_wc2rg"]
[ext_resource type="PackedScene" uid="uid://cmiirabf5k4eu" path="res://food/food_1.tscn" id="3_5gf8n"]
[ext_resource type="PackedScene" uid="uid://yhtiq01t2pva" path="res://food/food_2.tscn" id="3_bfxn1"]
[ext_resource type="PackedScene" uid="uid://bky5w4pv4lkyi" path="res://food/food_3.tscn" id="4_2c8qy"]
[ext_resource type="Script" path="res://scripts/BurgerLocation.gd" id="4_oxge7"]
[ext_resource type="Texture2D" uid="uid://cwcyks6e7wuja" path="res://Burger Topper Assets/Button.png" id="4_tcsed"]
[ext_resource type="Texture2D" uid="uid://dll7mf18jhomh" path="res://Burger Topper Assets/TravisIdle.png" id="5_66f2q"]
[ext_resource type="PackedScene" uid="uid://bt44ch3lyiiqc" path="res://food/food_4.tscn" id="5_vqvw4"]
[ext_resource type="PackedScene" uid="uid://btp6buabqrphh" path="res://food/food_5.tscn" id="6_3btdn"]
[ext_resource type="PackedScene" uid="uid://61msa8v3fddg" path="res://food/food_6.tscn" id="7_86tia"]
[ext_resource type="PackedScene" uid="uid://bimt1lcjrn34o" path="res://food/food_7.tscn" id="8_ug7vy"]
[ext_resource type="PackedScene" uid="uid://t7gg4oahcw10" path="res://food/food_8.tscn" id="9_mqv2t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w5mx2"]
bg_color = Color(0.74902, 0.505882, 0.392157, 1)
corner_radius_top_right = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_syvrd"]
bg_color = Color(0.74902, 0.505882, 0.392157, 1)
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_jwk7x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bmi4v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xisv4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t18ci"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rh2ac"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nbrp6"]

[node name="Game" type="Node2D"]
script = ExtResource("1_543vs")
food_scenes = Array[PackedScene]([ExtResource("3_5gf8n"), ExtResource("3_bfxn1"), ExtResource("4_2c8qy"), ExtResource("5_vqvw4"), ExtResource("6_3btdn"), ExtResource("7_86tia"), ExtResource("8_ug7vy"), ExtResource("9_mqv2t")])

[node name="BackgroundColor" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.603922, 0.364706, 0.247059, 1)

[node name="BurgerHolder" type="Label" parent="."]
offset_top = 554.0
offset_right = 626.0
offset_bottom = 648.0
theme_override_styles/normal = SubResource("StyleBoxFlat_w5mx2")

[node name="HeaderColor" type="Label" parent="."]
offset_right = 1152.0
offset_bottom = 102.0
theme_override_styles/normal = SubResource("StyleBoxFlat_syvrd")

[node name="Button" type="Button" parent="."]
material = SubResource("CanvasItemMaterial_jwk7x")
offset_left = 645.0
offset_top = 152.0
offset_right = 818.0
offset_bottom = 461.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_bmi4v")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xisv4")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t18ci")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_rh2ac")
theme_override_styles/focus = SubResource("StyleBoxEmpty_nbrp6")
text = "Button"

[node name="TextureRect" type="TextureRect" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_tcsed")

[node name="SpawnButton" type="Button" parent="."]
offset_left = 644.0
offset_top = 473.0
offset_right = 818.0
offset_bottom = 642.0
text = "Spawn Enemy"

[node name="FoodSpawnLocation" type="Marker2D" parent="."]
position = Vector2(310, 160)

[node name="stack_position" type="Marker2D" parent="."]
position = Vector2(310, 300)

[node name="TravisIdle" type="Sprite2D" parent="."]
position = Vector2(977, 377)
scale = Vector2(1.26906, 1.25346)
texture = ExtResource("5_66f2q")

[node name="BurgerLocation" type="Area2D" parent="."]
script = ExtResource("4_oxge7")

[node name="Sprite2D" type="Sprite2D" parent="BurgerLocation"]
position = Vector2(311, 470)
texture = ExtResource("1_wc2rg")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BurgerLocation"]
position = Vector2(310, 471)
polygon = PackedVector2Array(-18, 62, 20, 62, 44, 60, 81, 54, 115, 45, 152, 29, 175, 7, 180, -13, 180, -30, 173, -46, 162, -52, 133, -58, 72, -61, 7, -64, -51, -62, -129, -54, -162, -44, -177, -25, -176, -3, -164, 19, -148, 33, -102, 52, -57, 60)

[node name="FoodContainer" type="Node2D" parent="."]

[node name="CountdownTimer" type="Timer" parent="."]

[node name="timeLeft" type="Label" parent="."]
offset_right = 392.0
offset_bottom = 83.0
text = "300"

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 650.0
offset_top = 4.0
offset_right = 1104.0
offset_bottom = 92.0
step = 2.5

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SpawnButton" to="." method="_on_spawn_button_pressed"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
